Add summary to, and final revision of workshop 2.

--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -576,7 +576,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -614,9 +615,27 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In addition to loading data from files, if we have arrays of data that we want to save to file. We can use the opposite command **savetxt**. This works analagously to loadtxt thus\n",
+      "We will now modify the data we just loaded by shifting the values of the second column by -2 and save it back to a file.\n",
+      "\n",
+      "    modified_data = our_data - array([0,2,0,0])"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In order to save the modified data array we can use the command **savetxt**, which works analagously to loadtxt thus\n",
       "    \n",
-      "    savetxt('my_data_file.txt', our_data)"
+      "    savetxt('my_data_file.txt', modified_data)"
      ]
     },
     {
@@ -635,7 +654,7 @@
       "\n",
       "If we wanted data separated by commas we would use:\n",
       "    \n",
-      "    savetxt('my_data_file2.txt', our_data, delimiter=',')"
+      "    savetxt('my_data_file2.txt', modified_data, delimiter=',')"
      ]
     },
     {
@@ -871,7 +890,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note the *ddof=1* parameter set above which relates to the $N-1$ term in the denominator in the definition of standard deviation. Different values of *ddof* have different statistical meaning, we'll be dealing exclusivelly with *ddof=1*."
+      "Note the *ddof=1* parameter set above which relates to the $N-1$ term in the denominator in the definition of standard deviation. Different values of *ddof* have different statistical meaning. We will be dealing exclusivelly with *ddof=1*."
      ]
     },
     {
@@ -1206,7 +1225,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "By adding in *cov=True* we get back an additional matrix of four numbers, these express our uncertainty in the extracted coefficients. To be more explicit the diagonal elements of this matrix give us the variance $\\sigma{}^2$ of our estimates for the coefficients - The upper left diagonal element is the variance for the gradient and the lower right diagonal element is the variance for the intercept.\n",
+      "By adding in *cov=True* we get back an additional array (more specifically a matrix) of four numbers. These express our uncertainty in the extracted coefficients. To be more explicit the diagonal elements of this matrix give us the variance $\\sigma{}^2$ of our estimates for the coefficients: The upper left diagonal element (index [0,0]) is the variance for the gradient and the lower right diagonal element (index [1,1]) is the variance for the intercept.\n",
       "\n",
       "In order to turn these into the standard error for the coefficient we need to take the square roots of these values. In the lines bellow we assign the fitting parameters to convenient variable names:\n",
       "\n",
@@ -1599,7 +1618,7 @@
      "source": [
       "We believe that the nobel gas obeys the equation $pV=nRT$ where p is pressure, V volume, n the number of moles of gas, R the ideal gas constant and T is the temperature. \n",
       "\n",
-      "Hence that if we plot pressure against temperature fixing n and V, we should have a straight line with gradient $nR/V$. We will use the fact that we know we have 1 mole of gas and that the volume of the box is $2.4*10^{-2} m^3$ to determine an estimate for the gas constant. \n",
+      "Hence that if we plot pressure against temperature fixing n and V, we should have a straight line with gradient $nR/V$. We will use the fact that we know we have 1 mole of gas and that the volume of the box is $2.4 \\times 10^{-2} m^3$ to determine an estimate for the gas constant. \n",
       "\n",
       "We also know that the instrument we used to measure the pressure becomes less and less precise the hotter it gets. Infact let us suppose that our instrument is calibrated to perform perfect measurements at zero degrees Celsius (this is an idealization of course), but that the error associated with our measurements grows as the square of the temperature above zero degrees Celsius. We'll use the **errorbar** function to visualise our data together with the uncertainty.\n",
       "\n",
@@ -1752,7 +1771,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We plot the two fits together and note the smaller weight of the points at higher temperature on the weighted fit\n",
+      "We plot the two fits together and note the effect of the smaller weight of the points at higher temperature on the weighted fit\n",
       "\n",
       "    m_w = params_w[0]\n",
       "    c_w = params_w[1]\n",
@@ -1773,6 +1792,27 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Summary"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In this workshop we covered several important data analysis methods which you will use through your degree and career.\n",
+      "\n",
+      "We recapitulated the basic principles on how to call data stored in arrays and to plot it. We looked at how a logarithmic scale can be used to visualize data spanning several orders of magnitude. We saw how to load from, and save data back to files (most instruments should be able to export data in files). We have seen how simple statistical quantities of data sets can be calculated.\n",
+      "\n",
+      "We looked in some detail at the important case of how to fit a linear function to a set of experimental points. How to extract the parameters that best describe the data and their statistical uncertainties (stored in the diagonal of the covarience matrix). When fitting experimental data one should always be critical and check that the fitting function reasonably describes the data trend. One way of doing that is to look at the plot of the residuals of the fit. When fitting data, it is common that different points have different associated uncertainties. In this case one should weight each point by the inverse of the associated variance.\n",
+      "\n",
+      "While linear fits are very common in many areas of chemistry, in the next workshop we will look at how to fit arbitrary non-linear functions."
+     ]
     },
     {
      "cell_type": "heading",
@@ -1835,16 +1875,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Calculate the standard error associate with mean absorbances and generate plot including errorbars defined by the standard error - what's the problem?"
+      "* Calculate the standard error associate with mean absorbances and generate plot including errorbars defined by the standard error. (Anything odd?)"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "std_e = std(abs_data, axis=1)/len(data)**0.5\n",
+      "std_e = std(abs_data, ddof=1, axis=1)/len(data)**0.5\n",
       "\n",
-      "errorbar(conc_data, mean_abs, yerr=std_abs, linestyle='', marker='o')\n",
+      "errorbar(conc_data, mean_abs, yerr=std_e, linestyle='', marker='^')\n",
       "show()"
      ],
      "language": "python",
