Final revision of problem sets 1 and 2.

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -66,7 +66,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data = loadtxt('measurements.csv',delimiter=',')"
+      "data = loadtxt('measurements.csv',delimiter=',')\n",
+      "data"
      ],
      "language": "python",
      "metadata": {},
@@ -110,7 +111,7 @@
       "\n",
       "The *mean* $\\bar{x}$ of a set of independent measurements of some property $x$ is the best estimate of the actual value of that property. As we will see below, the precision of this estimate can be improved by increasing the number of measurements we are averaging over. \n",
       "\n",
-      "The *standard deviation* $s_x$ quantifies the spread of the experimental measurements about its mean value. (When writing up experiments you will often report the mean of some set of measurements +/- some error value, it is important to note that the standard deviation is *not* this error value - below we will examine what this error is in more detail.)\n",
+      "The *standard deviation* $s_x$ quantifies the spread of the experimental measurements about its mean value. (It corresponds to the average error of a single measurement. When writing up experiments you will often report the mean of some set of measurements +/- some error value, it is important to note that the standard deviation is *not* this error value - below we will examine what this error is in more detail.)\n",
       "\n",
       "* For each instrument's 100,000 measurements, calculate the mean and the standard deviation (don't forget to set the appropriate *ddof* value). \n",
       "\n",
@@ -178,9 +179,9 @@
       "\n",
       "* For the data from the first measuring instrument, construct three histograms on a single figure - one with all 100,000 measurements, one for the first 10,000 measurements, and another for the first 1,000 measurements.\n",
       "\n",
-      "* Change figure so that are normalized by sample size (you will need to use the built in tools to discover the appropriate keyword of function **hist** to achieve this).\n",
+      "* Change the figure so that are normalized by sample size (you will need to use the built in tools to discover the appropriate keyword of function **hist** to achieve this).\n",
       "\n",
-      "By looking at these three histograms, and by calculating their means and standard deviations, what do you notice about how much the mean value, and the standard deviation change as the sample size grows? (bear in mind that all these sample sizes are all large)"
+      "By looking at these three histograms, and by calculating their means and standard deviations, what do you notice about how much the mean value, and the standard deviation change as the sample size grows? (Bear in mind that all these sample sizes are fairly large.)"
      ]
     },
     {
@@ -230,11 +231,9 @@
       "\n",
       "Let us investigate how this quantity varies with sample size. We will be considering data from instruments 1 and 4, these have similar mean value as you should see in your histograms above.\n",
       "\n",
-      "* For datasets 1 and 4 pick 5 sample sizes between 1000 and 100,000 and produce a plot showing how the standard deviation and the standard error change as sample size is varied.\\*\n",
+      "* For datasets 1 and 4 pick 5 sample sizes between 1000 and 100,000 and produce a plot showing how the standard deviation and the standard error change as sample size is varied. (You may want to use a logarithmic scale in this plot.)\n",
       "\n",
-      "* What does this plot tell you about the usefulness of repeating the same measurement?\n",
-      "\n",
-      "\\* You may want to use a logarithmic scale in this plot."
+      "* What does this plot tell you about the usefulness of repeating the same measurement?"
      ]
     },
     {
@@ -285,9 +284,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "From the histograms above we note that the spread of data set 4 is greater than that of data set 1 (i.e. instrument 4 is more affected by noise than instrument 1), and consequently at equal sample sizes the standard error of the mean is greater for dataset 4.\n",
-      "\n",
-      "* By drawing a horizontal line in the plot above do a rough estimate of what sample size is needed to achieve the same precision using measuring instrument 1, as is obtained using measuring instrument 4 with 100,000 measurements."
+      "* By drawing a horizontal line in the plot above, do a rough estimate of what sample size is needed to achieve the same precision using measuring instrument 1, as is obtained using measuring instrument 4 with 100,000 measurements."
      ]
     },
     {
@@ -384,9 +381,9 @@
       "\n",
       "Although this statistical error vanishes for infinite sample sizes, this does not mean you can achieve absolute confidence in your measurements by taking an extremely large number of repetitions. \n",
       "\n",
-      "The standard error quantifies our uncertainty due to the presence of random noise, as we have seen we can combat this using a sufficiently large sample size making our estimate more and more precise. There is however a second form of error that influences the accuracy of our estimate and this form is not reduced through repetition: *systematic error*. This corresponds to imperfect/faulty operation of the instruments or miscalibration.\n",
+      "The standard error quantifies our uncertainty due to the presence of random noise. As we have seen we can combat this using a sufficiently large sample size making our estimate more and more precise. There is however a second form of error that influences the accuracy of our estimate and this form is not reduced through repetition: *systematic error*. This corresponds to imperfect/faulty operation of the instruments or miscalibration.\n",
       "\n",
-      "Looking at the data produced by our five instruments we see that all the instruments are affected by noise with instrument 5 the most precise but that instruments two three and five suffer from systematic errors which push their mean value of their measurements away from the actual value of the system (~2.4) which is correctly captured by instruments one and four. \n",
+      "Looking at the data produced by our five instruments we see that all the instruments are affected by noise (instrument 5 being the most precise) but that instruments two three and five suffer from systematic errors which push the mean value of their measurements away from the actual value of the system (~2.4) which is correctly captured by instruments one and four. \n",
       "\n",
       "Systematic errors need to be estimated and corrected for based on knowledge of the measurement process and instruments used."
      ]
@@ -417,7 +414,7 @@
       "\n",
       "where $[N_2 O_5]_0$ is the initial concentration and $t$ is the time. (If you want to know where the solution comes from click [here](https://wiki.ch.ic.ac.uk/wiki/index.php?title=Solving_the_Rate_Equation).)\n",
       "\n",
-      "We will attemp to determine the value of the rate constant $k$. In order to do this, the concentration of $N_2 O_5$ was recorded as a function of time at $65^{\\circ}C$, and recorded in file [N2O5vst_65C.dat](files/N2O5vst_65C.dat), where the first column is time in seconds and the second column is concentration in $\\text{mol.dm}^{-3}$.\n",
+      "We are interested in determining the value of the rate constant $k$. In order to do this, the concentration of $N_2 O_5$ was recorded as a function of time at $65^{\\circ}C$, and stored in file [N2O5vst_65C.dat](files/N2O5vst_65C.dat), where the first column is time in seconds and the second column is concentration in $\\text{mol.dm}^{-3}$.\n",
       "\n",
       "* Load the data and plot the concentration of $N_2 O_5$ against time, label the axes and include the units in the label."
      ]
@@ -517,7 +514,7 @@
       "\n",
       "$$k(T)=A e^{-\\frac{E_a}{R T}} ,$$\n",
       "\n",
-      "Where $E_a$ is activation energy, $A$ is the so called pre-exponential factor and $R$ is the ideal gas constant.\n",
+      "where $E_a$ is activation energy, $A$ is the so called pre-exponential factor (which is related to the frequency of molecular collisions) and $R$ is the ideal gas constant.\n",
       "\n",
       "* Create an appropriate function that through non linear fitting will allow us to extract the pre-exponential factor and the rate constant.\n",
       "\n",
