--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -13,7 +13,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Problem set other"
+      "Problem set 2"
      ]
     },
     {
@@ -57,7 +57,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The file [chromatogram_ion126.dat](files/chromatogram_ion126.dat) contains data from an experiment combining gas chromatography with a mass spectometer. The experiment aims to determine the amount of the glycine present in a sample of ice. The first column of the data corresponds to the time after the sample is injected into the column (units are minutes), the second column corresponds to the intensity measured by the  mass spectrometer (units are counts of detector hits per minute).\n",
+      "The file [chromatogram_ion126.dat](files/chromatogram_ion126.dat) contains data from an experiment combining gas chromatography with a mass spectrometer. The experiment aims to determine the amount of the glycine present in a sample of ice. The first column of the data corresponds to the time after the sample is injected into the column (units are minutes), the second column corresponds to the intensity measured by the  mass spectrometer (units are counts of detector hits per minute).\n",
       "\n",
       "* In one figure plot the full chromatogram\n",
       "* In a second figure create a plot zoomed in on the largest peak (this peak marks the point when glycine reached the mass spectrometer)."
@@ -108,7 +108,7 @@
       "$n_{\\text{gly}}$ is the number of moles of glycine\n",
       "$A_{\\text{std}}$ is a calibration constant equal to $9.538 \\times 10^6 \\text{counts}$.\n",
       "\n",
-      "The area under the glycine peak can be calculated in a variery of ways here, we will do so by fitting a function to the peak then determining the area under the function. If you inspect the peak above you will notice that it is asymmetric, with a very fast rise from about zero up to it's maximum value and a comparativelly slower decay back down to zero.\n",
+      "The area under the glycine peak can be calculated in a variery of ways, here we will do so by fitting a function to the peak then determining the area under the function. If you inspect the peak above you will notice that it is asymmetric, with a very fast rise from about zero up to it's maximum value and a comparativelly slower decay back down to zero.\n",
       "\n",
       "This behaviour can be captured with the following function\n",
       "\n",
@@ -203,14 +203,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The following function *g* is a sum of two gaussian curves.\n",
+      "The following mathematical function $g1$ corresponds to a Gaussian curve:\n",
       "\n",
-      "<font size=5>$$g(x)=a \\left(e^{-\\frac{(x+d/2)^2}{2 s^2}}+e^{-\\frac{(x-d/2)^2}{2 s^2}}\\right)$$</font>\n",
+      "$$g1(x)=a e^{-\\frac{(x-x0)^2}{2 s^2}} .$$\n",
       "\n",
-      "* Define a python function corresponding to the above mathematical function. \n",
-      "* Use this to produce several plots of $g(x)$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
+      "Function *g2* is a sum of two Gaussian curves:\n",
       "\n",
-      "* Create a plot of *g* as a function of both *x* and *d* simultaneously."
+      "$$g2(x)=a \\left(e^{-\\frac{(x+d/2)^2}{2 s^2}}+e^{-\\frac{(x-d/2)^2}{2 s^2}}\\right) .$$\n",
+      "\n",
+      "* Define a python function corresponding to function $g2$.\n",
+      "\n",
+      "* Use this to produce several plots of $g2(x)$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
+      "\n",
+      "* Create a plot of *g2* as a function of both *x* and *d* simultaneously."
      ]
     },
     {
@@ -332,7 +337,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A molecule can be promoted to an excited state by absorbing light. Once promoted it can then fall back to it's original state by emitting light - a process called fluorescence. The wavelength of the emitted light depends on the properties of the molecule and a great deal of information about a molecule can be determine by examining the light it emits.\n",
+      "A molecule can be promoted to an excited state by absorbing light. Once in that excited state it can then fall back to it's original state by emitting light - a process called fluorescence. The wavelength of the emitted light depends on the properties of the molecule and a great deal of information about a molecule can be determine by examining the light it emits.\n",
       "\n",
       "The file [anthracene_fluo.dat](files/anthracene_fluo.dat) contains data for the emission spectrum of a solution of [anthracene](http://en.wikipedia.org/wiki/Anthracene) in cyclohexane. The first column corresponds to the wavelength of the emitted light (in units of nanometers) and the second column corresponds to the intensity of the emitted light (units are arbitrary).\n",
       "\n",
@@ -359,12 +364,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Fit a function to this data and plot the spectrum together with your fitted function on a single figure.\\*\n",
+      "* Construct a function that will suitably fit the full spectrum. (Note: In spectroscopy it is common practice to fit individual peaks of a spectrum using Gaussian functions.)\n",
       "\n",
-      "* Using the parameters you've extracted from your fitting procedure to add plots of the individual Gaussians functions you made use of in your fitting function.\n",
+      "* Fit the function to the spectrum data and plot both spectrum and fitted function together on a single figure.\n",
       "\n",
-      "\n",
-      "\\* In spectroscopy it is common practice to fit a spectrum using a sum of *gaussian* functions (a single Gaussian function is: $f(x) = a \\exp{\\left(- { \\frac{(x-d)^2 }{ 2 s^2} } \\right)}$)"
+      "* Using the parameters you've extracted from your fitting procedure, add to the previous figure plots of the individual peaks that form the spectrum."
      ]
     },
     {
@@ -509,9 +513,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Depending on the number of gaussians you used to fit the spectrum you should have obtained a rather good fit. However, you can do better! Even though it looks like there are 4 peaks corresponding to a single vibronic progression (ignoring the peaks at 340nm and 475nm) in fact, each of these 4 peaks is two closely overlapping ones. If you add two gaussian functions for each of the peaks instead of one per peak you will obtain a noticiably better fit. \n",
+      "Depending on the number of gaussians you used to fit the spectrum you should have obtained a rather good fit. However, you can do better! Even though it looks like the anthracene spectrum is formed by a single vibronic progression (excluding the 340nm and 475nm peaks), in fact, each apparent peak is formed by two underlying peaks corresponding to two closely overlapping vibronic progressions. Improve your fitting function such as to capture both vibronic progressions and you will obtain a noticiably better fit. \n",
       "\n",
-      "Now that you are capturing both sets of vibronic progressions can now produce two plots of the wavelengths vs. an integer index for the two sets of progressions."
+      "Now that you are capturing both sets of vibronic progressions you can now produce two plots of the wavelengths vs. an integer index for the two progressions."
      ]
     },
     {
