Final final updating

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eb28e36f13526f09e70e3428c111a6dcce5ab5611dbf2b1a38ac20a8b5ee9329"
+  "signature": "sha256:40f7f8f33dc17d3609ef77b87a8fee94295c6d1425f66c0fd76231a907a81897"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "source": [
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
-      "Notebook is adapted from material gathered by Andrew McKinley and Oliver Robotham, as well as Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "Notebook is adapted from material by Andrew McKinley, Niall Jackson  and Oliver Robotham, as well as Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
