--- a/C_Y1/workshop1/Workshop 1.ipynb
+++ b/C_Y1/workshop1/Workshop 1.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:582ad5f5a5905857c7606117a709fbcb9c4ff39928016098d3709abccb524b0e"
+  "signature": "sha256:390a5c6e0513636f81ee5bd79b762592e155c73617afc60304fa0d0da9d71c30"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -130,7 +130,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can use scientific notation to specify big numbers\n",
+      "We can use scientific notation to specify big numbers e.g. to compute $6.023 \\times 10^{23} \\times 4$ we would write:\n",
       "\n",
       "    6.023e23 * 4"
      ]
@@ -486,7 +486,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%pylab inline"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -822,7 +824,39 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can access a subsection of an array by specifing the index of the first item we want to include, the index of the last item we want to include plus one, and how big a step size we want\n",
+      "We can access a subsection of an array by specifing two indices separated by a colon. The subsection starts with the element defined by the first index and include all elements upto **but not including** the element defined by the second index\n",
+      "\n",
+      "    some_numbers[1:5]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*It is important you grasp this syntax, we will be building on it throughout these workshops. In the cell below try creating different subsections of some_numbers, predicting the output you will receive before you execute the cell until you feel comfortable you understand what's going on.*"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "By adding a third index after another colon, we can create discontinuous subsections, here we specify a step size of two hence omit every other element.\n",
       " \n",
       "    some_numbers[1:5:2]"
      ]
@@ -839,9 +873,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The final step size can be removed if we just want a step size of 1.\n",
-      "\n",
-      "    some_numbers[1:5]"
+      "*Again it is very improtant you grasp how to do this, please use the cell below to try out different subsections and step  sizes until you feel comfortable using this syntax. If you don't understand please ask a demonstrator*"
      ]
     },
     {
@@ -1288,7 +1320,16 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "X = linspace(-pi, pi, 128)\n",
+      "C = cos(X)\n",
+      "S = sin(X)\n",
+      "\n",
+      "plot(X,C)\n",
+      "plot(X,S)\n",
+      "\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1382,8 +1423,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1416,8 +1456,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1645,15 +1684,15 @@
       "#the x value we're going to consider\n",
       "t = 2*pi/3\n",
       "#plot the blue diamond \n",
-      "plot(array([t,t]),array([0,np.cos(t)]), color ='blue', linewidth=2.5, linestyle=\":\")\n",
-      "plot(array([t]),array([np.cos(t)]), color ='blue', marker='D', markersize=10)\n",
+      "plot(array([t,t]),array([0,cos(t)]), color ='blue', linewidth=2.5, linestyle=\":\")\n",
+      "plot(array([t]),array([cos(t)]), color ='blue', marker='D', markersize=10)\n",
       "#plot label and arrow\n",
       "text(2.3, 1.05, r'$\\sin(\\frac{2\\pi}{3})=\\frac{\\sqrt{3}}{2}$', fontsize=16)\n",
       "arrow(2.4, 1.0, -0.15, -0.07, head_width=0.05, head_length=0.05)\n",
       "\n",
       "#plot the red diamond\n",
-      "plot(array([t,t]),array([0,np.sin(t)]), color ='red', linewidth=2.5, linestyle=\":\")\n",
-      "plot(array([t]),array([np.sin(t)]), color ='red', marker='D', markersize=10)\n",
+      "plot(array([t,t]),array([0,sin(t)]), color ='red', linewidth=2.5, linestyle=\":\")\n",
+      "plot(array([t]),array([sin(t)]), color ='red', marker='D', markersize=10)\n",
       "#plot alabel and arrow\n",
       "text(0.75, -0.75, r'$\\cos(\\frac{2\\pi}{3})=-\\frac{1}{2}$', fontsize=16)\n",
       "arrow(1.85, -0.65, 0.12, 0.08, head_width=0.05, head_length=0.05)\n",
@@ -1712,11 +1751,11 @@
       "plot(X, S, color=\"red\", linestyle=\"None\", marker=\"o\", label=\"sine\")\n",
       "legend(loc='upper left')\n",
       "\n",
-      "t = 2*np.pi/3\n",
-      "plot(array([t,t]),array([0,np.cos(t)]), color ='blue', linewidth=2.5, linestyle=\":\")\n",
-      "plot(array([t]),array([np.cos(t)]), color ='blue', marker='D', markersize=10)\n",
-      "plot(array([t,t]),array([0,np.sin(t)]), color ='red', linewidth=2.5, linestyle=\":\")\n",
-      "plot(array([t]),array([np.sin(t)]), color ='red', marker='D', markersize=10)\n",
+      "t = 2*pi/3\n",
+      "plot(array([t,t]),array([0,cos(t)]), color ='blue', linewidth=2.5, linestyle=\":\")\n",
+      "plot(array([t]),array([cos(t)]), color ='blue', marker='D', markersize=10)\n",
+      "plot(array([t,t]),array([0,sin(t)]), color ='red', linewidth=2.5, linestyle=\":\")\n",
+      "plot(array([t]),array([sin(t)]), color ='red', marker='D', markersize=10)\n",
       "\n",
       "text(2.3, 1.05, r'$\\sin(\\frac{2\\pi}{3})=\\frac{\\sqrt{3}}{2}$', fontsize=16)\n",
       "arrow(2.4, 1.0, -0.15, -0.07, head_width=0.05, head_length=0.05)\n",
@@ -1765,7 +1804,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "x = array([0, 1, 2, 3, 4, 5, 6, 7])\n",
+      "y = array([ 4, 11, 6, 5, -4, 3.5, 7, 9.1])"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1784,7 +1826,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "width = 1/1.5\n",
+      "bar(x, y, width)\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1809,7 +1855,16 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "labels = ['data1','data2','data3','data4','data5','data6','data7','data8']\n",
+      "width = 1\n",
+      "\n",
+      "xticks(x + width/2.0, labels )\n",
+      "ylabel('Intensity')\n",
+      "\n",
+      "bar(x, y, width, color=\"cyan\")\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1842,7 +1897,16 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data = array([1, 1, 1, 3, 2, 5, 1, 10, 10, 8])\n",
+      "\n",
+      "hist(data, bins=12, color=\"magenta\")\n",
+      "xlabel('bins')\n",
+      "ylabel('count')\n",
+      "\n",
+      "xlim(0,12)\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1881,7 +1945,16 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "x=linspace(0,6*pi,128)\n",
+      "y=e**(-x/10)*cos(x)\n",
+      "\n",
+      "title('Saving this plot')\n",
+      "plot(x,y)\n",
+      "\n",
+      "savefig('saved_plot.svg')\n",
+      "show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1928,38 +2001,16 @@
      "input": [
       "L=10\n",
       "\n",
-      "X = linspace(0,L*pi,1000)\n",
-      "\n",
-      "ylim(-1.1,1.1)\n",
-      "\n",
-      "plot(sin(1*X/L), label='n=1')\n",
-      "plot(sin(2*X/L), label='n=2')\n",
-      "plot(sin(3*X/L), label='n=3')\n",
-      "plot(sin(4*X/L), label='n=4')\n",
-      "\n",
-      "legend(loc='lower left')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#soln (will not provided in the final version)\n",
-      "L=10\n",
-      "\n",
       "X = linspace(0,L,1000)\n",
-      "\n",
-      "plot(sin(1*pi*X/L), label='n=1')\n",
-      "plot(sin(2*pi*X/L) +2, label='n=2')\n",
-      "plot(sin(3*pi*X/L) +4, label='n=3')\n",
-      "plot(sin(4*pi*X/L) +7, label='n=4')\n",
       "\n",
       "xlim(0,1000)\n",
       "ylim(0,12)\n",
+      "\n",
+      "plot(sin(1*pi*X/L), label='n=1')\n",
+      "plot(sin(2*pi*X/L)+2, label='n=2')\n",
+      "plot(sin(3*pi*X/L)+4, label='n=3')\n",
+      "plot(sin(4*pi*X/L)+7, label='n=4')\n",
+      "\n",
       "legend(loc='upper right')\n",
       "show()"
      ],
@@ -2025,8 +2076,11 @@
      "source": [
       "Based on the behaviour of the two functions at large *r* values, can you say why the Morse potential provides a more realistic picture the harmonic oscilator?\n",
       "\n",
-      "The force between the two particles is equal to minus the derivative of the potential - $\\frac{dV(r)}{dr}$ (for whichever form the potential may have). In this exercise we would like to generate two figures, one for each potential, where we add a line corresponding to the force superimposed on the plot of the potential energy. You'll also need to add, a title, label the x axis, create a legend and if you can, move the spines such that it crosses the *y* axis at 0. The figure bellow shows the effect for the Morse potential.\n",
+      "The force between the two particles is equal to minus the derivative of the potential - $\\frac{dV(r)}{dr}$ (for whichever form the potential may have). \n",
       "\n",
+      "This exercise requires the generatiion of two figures. One figure should include a plot of the Harmonic potential and a plot of the corresponding Harmonic force, the other figure should include a plot of the Morse potential and a plot of the corresponding Morse force. You'll also need to add, a title, label the x axis, create a legend and if you can, move the spines such that they crosses the *y* axis at 0. \n",
+      "\n",
+      "The figure below shows the result we are expecting for the Morse potential and force:\n",
       "\n",
       "<img src=\"files/morse_exercise.svg\">"
      ]
@@ -2035,35 +2089,77 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#soln\n",
-      "\n",
-      "D, a, re = 1,1,1\n",
+      "D=1\n",
+      "a=1\n",
+      "re=1\n",
       "\n",
       "X = linspace(0,4,100)\n",
       "morse = D*(1-e**(-a*(X-re)))**2\n",
-      "d_morse = 2*D*a*(-e**(-a*(X-re)) + e**(-2*a*(X-re)))\n",
+      "harmonic=(a**2)*D*(X-re)**2\n",
+      "div_harmonic = harmonic*(2*X-2*re)\n",
+      "\n",
+      "figure(figsize=(12,8))\n",
+      "#plot(X, morse, label=r'$V_m (r)$')\n",
+      "plot(X, harmonic, color='blue',label=r'$V_h (r)$')\n",
+      "plot(X, -div_harmonic, color='green',label=r'$F_h (r)$')\n",
+      "legend()\n",
+      "title('D=1, a=1, re=1')\n",
+      "\n",
+      "xlabel('r')\n",
+      "ylim(-1.5,1.5)\n",
       "\n",
       "ax = gca()\n",
+      "#make the right spine invisible\n",
       "ax.spines['right'].set_color('none')\n",
+      "#make the top spine invisible\n",
       "ax.spines['top'].set_color('none')\n",
-      "ax.spines['bottom'].set_position(['data',0])\n",
-      "ax.spines['left'].set_position(['data',0])\n",
-      "\n",
-      "ax.xaxis.set_ticks_position('bottom')\n",
-      "ax.yaxis.set_ticks_position('left')\n",
-      "\n",
-      "xlim(0,4)\n",
-      "ylim(-.6,2)\n",
-      "xlabel('r')\n",
-      "title('Morse potential plot')\n",
-      "plot(X, morse, label='V(r)')\n",
-      "plot(X,d_morse, label='F(r)')\n",
-      "legend()\n",
+      "#move the bottom spine to the centre\n",
+      "ax.spines['bottom'].set_position('zero')\n",
+      "#move the left spine to the centre\n",
+      "ax.spines['left'].set_position('zero')\n",
       "show()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "D=1\n",
+      "a=1\n",
+      "re=1\n",
+      "\n",
+      "X = linspace(0,4,100)\n",
+      "morse = D*(1-e**(-a*(X-re)))**2\n",
+      "div_morse = 2 * (1-e**(-a*(X-re))) * a*e**(-a*(X-re)) \n",
+      "\n",
+      "figure(figsize=(12,8))\n",
+      "plot(X, morse, label=r'$V_m (r)$')\n",
+      "plot(X, -div_morse, color='green',label=r'$F_h (r)$')\n",
+      "legend()\n",
+      "title('D=1, a=1, re=1')\n",
+      "\n",
+      "xlabel('r')\n",
+      "ylim(-1.5,1.5)\n",
+      "\n",
+      "ax = gca()\n",
+      "#make the right spine invisible\n",
+      "ax.spines['right'].set_color('none')\n",
+      "#make the top spine invisible\n",
+      "ax.spines['top'].set_color('none')\n",
+      "#move the bottom spine to the centre\n",
+      "ax.spines['bottom'].set_position('zero')\n",
+      "#move the left spine to the centre\n",
+      "ax.spines['left'].set_position('zero')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -2077,7 +2173,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The code cell below generates a plot representing 3 periods of a damped oscillator. In this exercise you will be generating two figures where we colour the markers differently. On a first figure color the markers sequentially with three distink colors (eg. blue, green, red, blue, green, red, blue, etc.). On the second figure color the markers corresponding to each period of the motion with a different color."
+      "The code cell below generates a plot representing 3 periods of a damped oscillator. In this exercise you will be generating two figures where we colour the markers differently. On the first figure color the markers sequentially with three distinct colours (eg. blue, green, red, blue, green, red, blue, etc.). On the second figure colour the markers corresponding to each period of the motion with a different colour."
      ]
     },
     {
@@ -2099,15 +2195,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#soln\n",
-      "\n",
-      "points=90\n",
-      "x=linspace(0,6*pi,points)\n",
-      "y=e**(-x/10)*cos(x)\n",
-      "\n",
-      "plot(x[::3],y[::3],alpha=0.5,linestyle='None',marker=7)\n",
-      "plot(x[1::3],y[1::3],alpha=0.5,linestyle='None',marker=7)\n",
-      "plot(x[2::3],y[2::3],alpha=0.5,linestyle='None',marker=7)\n",
+      "figure(figsize=(12,8))\n",
+      "plot(x[::3],y[::3],linestyle='None',marker='^',alpha=0.7,color='red')\n",
+      "plot(x[1::3],y[1::3],linestyle='None',marker='^',alpha=0.7,color='blue')\n",
+      "plot(x[2::3],y[2::3],linestyle='None',marker='^',alpha=0.7,color='green')\n",
       "show()"
      ],
      "language": "python",
@@ -2118,15 +2209,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#soln\n",
+      "plot(x[:points/3],y[:points/3],linestyle='None',marker=7,alpha=0.5,color='red')\n",
       "\n",
-      "points=90\n",
-      "x=linspace(0,6*pi,points)\n",
-      "y=e**(-x/10)*cos(x)\n",
+      "plot(x[points/3:2*points/3],y[points/3:2*points/3],linestyle='None',marker=7,alpha=0.5,color='blue')\n",
       "\n",
-      "plot(x[:points/3],y[:points/3],alpha=0.5,linestyle='None',marker=7)\n",
-      "plot(x[points/3:2*points/3],y[points/3:2*points/3],alpha=0.5,linestyle='None',marker=7)\n",
-      "plot(x[2*points/3:points],y[2*points/3:points],alpha=0.5,linestyle='None',marker=7)\n",
+      "plot(x[2*points/3:points],y[2*points/3:points],linestyle='None',marker=7,alpha=0.5,color='green')\n",
+      "\n",
+      "\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plot(x[:30],y[:30],linestyle='None',marker=7,alpha=0.5,color='red')\n",
+      "\n",
+      "plot(x[30:60],y[30:60],linestyle='None',marker=7,alpha=0.5,color='blue')\n",
+      "\n",
+      "plot(x[60:90],y[60:90],linestyle='None',marker=7,alpha=0.5,color='green')\n",
+      "\n",
+      "\n",
       "show()"
      ],
      "language": "python",
